# vnstock

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  roadmap.md
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/commands/: opsx-apply.md
.opencode/skills/openspec-apply-change/: SKILL.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
assets/data/schemas/: Fundamental_equity_ACB_balance_sheet.json  Fundamental_equity_ACB_cash_flow.json  Fundamental_equity_ACB_income_statement.json  Fundamental_equity_ACB_ratio.json  Fundamental_equity_BVH_balance_sheet.json  Fundamental_equity_BVH_cash_flow.json  Fundamental_equity_BVH_income_statement.json  Fundamental_equity_BVH_ratio.json  Fundamental_equity_CTG_balance_sheet.json  Fundamental_equity_CTG_cash_flow.json  Fundamental_equity_CTG_income_statement.json  Fundamental_equity_CTG_ratio.json  Fundamental_equity_FPT_balance_sheet.json  Fundamental_equity_FPT_cash_flow.json  Fundamental_equity_FPT_income_statement.json  Fundamental_equity_FPT_ratio.json  Fundamental_equity_HCM_balance_sheet.json  Fundamental_equity_HCM_cash_flow.json  Fundamental_equity_HCM_income_statement.json  Fundamental_equity_HCM_ratio.json  Fundamental_equity_HPG_balance_sheet.json  Fundamental_equity_HPG_cash_flow.json  Fundamental_equity_HPG_income_statement.json  Fundamental_equity_HPG_ratio.json  Fundamental_equity_NVL_balance_sheet.json  Fundamental_equity_NVL_cash_flow.json  Fundamental_equity_NVL_income_statement.json  Fundamental_equity_NVL_ratio.json  Fundamental_equity_PTI_balance_sheet.json  Fundamental_equity_PTI_cash_flow.json  Fundamental_equity_PTI_income_statement.json  Fundamental_equity_PTI_ratio.json  Fundamental_equity_PVI_balance_sheet.json  (+36 more)
docs/: 1_quickstart_stock_vietnam.ipynb  AUTH_AND_CREDENTIALS.md  DATASET_CONTRACTS.md  DATA_QUALITY.md  DATA_SERVICE_DESIGN.md  DOCKER_RUNTIME.md  LOCAL_DATA_SERVICE.md  PLUGIN_ARCHITECTURE.md  PLUGIN_ARCHITECTURE_STATUS.md  PLUGIN_RUNTIME_MIGRATION.md  PROVIDER_DIAGNOSTICS.md  PROVIDER_HARDENING.md  PROVIDER_PLUGIN_INTERFACE.md  PROVIDER_PLUGIN_NORMALIZATION.md  PROVIDER_ROUTING.md
docs/unified-ui/: 03_Fundamental.ipynb
examples/: README.md  dnse_example.py  fmarket_example.py  fmp_example.py  kbs_example.py  msn_example.py  tcbs_example.py  vci_example.py
examples/output/: README.md  dnse_output.txt  fmarket_output.txt  kbs_output.txt  msn_output.txt  tcbs_output.txt  vci_output.txt
tests/contracts/: test_builtin_provider_capabilities.py
tests/fixtures/: fake_provider.py
tests/live/: __init__.py  conftest.py
vnstock/: __init__.py
vnstock/api/: company.py  financial.py  trading.py
vnstock/cli/: __init__.py  auth.py  serve.py  tcbs_login.py
vnstock/core/: result.py  settings.py
vnstock/providers/: __init__.py
vnstock/service/: __init__.py  dataset_mapper.py  runtime_dependency.py  serializers.py  server.py
vnstock/ui/: _base.py  _pools.py  _registry.py
(+225 files in other folders)
